# django-template

./: .editorconfig  .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
web/: docker-compose.dev.yml
web/.env/templates/: dev.env  prod.env
web/core/: conftest.py  manage.py
web/core/common/utils/: misc.py  settings.py
web/core/project/: asgi.py  wsgi.py
web/core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
web/core/project/settings/templates/: settings.dev.py  settings.unittests.py
web/core/scripts/: boot.py
