[tool.poetry]
name = "web"
version = "0.1.0"
description = "Web service for healthcare professionals"
authors = ["Eleftherios Daskalakis <leftetris@yahoo.gr>"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.16" # LTS: April 2026
django-cleanup = "^8.1.0"
django-rosetta = "^0.10.0"
django-chunked-upload = "^2.0.0"
django-widget-tweaks = "^1.5.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"
djangorestframework = "^3.15.2"
sweetify = "^2.3.1"
pillow = "^10.4.0"
redis = "^5.0.8"
celery = "^5.4.0"
celery-progress = "^0.4"
gunicorn = "^23.0.0"
python-dateutil = "^2.9.0"
eventlet = "^0.37.0"
babel = "^2.16.0"
python-magic-bin = "^0.4.14"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"
psycopg2 = "^2.9.9"
pytest = "^8.3.3"
pytest-xdist = "^3.6.1"
pytest-django = "^4.9.0"
model-bakery = "^1.19.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
colorlog = "^6.8.2"

[tool.isort]
multi_line_output = 5
line_length = 120

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 120
dedent_closing_brackets = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "web.core.project.settings"
django_find_project = false
python_files = "test_*.py"
testpaths = ["core"]
filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
